# full-stack-vue-fastapi-mysql

./: .editorconfig  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: test.yml
backend/: README.md  lambda_Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: dummy.py
backend/tests/api/v1/router/: test_dummy.py
frontend/: package-lock.json  package.json
stacks/: __init__.py  sam_stack.py  vpc_stack.py
